Fixed vertical alignment of data on all_students page

--- a/application/static/all_students.css
+++ b/application/static/all_students.css
@@ -22,6 +22,11 @@ h5 {
 
 th {
     background-color: #c6dc8a !important;
+    vertical-align: middle;
+}
+
+td {
+    vertical-align: middle;
 }
 
 a {
